objects/geopointe__GP_Map_Layer__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Border_Opacity__c</fullName>
        <label>Border Opacity</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Data_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Set</label>
        <referenceTo>geopointe__Data_Set_Object__c</referenceTo>
        <relationshipLabel>Geopointe Map Layers</relationshipLabel>
        <relationshipName>Map_Layers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Fields__c</fullName>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Fill_Opacity__c</fullName>
        <label>Fill Opacity</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>geopointe__GP_Folder__c</referenceTo>
        <relationshipLabel>Geopointe Map Layers</relationshipLabel>
        <relationshipName>Map_Layers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__Geometry__c</fullName>
        <label>Geometry</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Legend__c</fullName>
        <label>Legend</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>geopointe__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Thematic</fullName>
                    <default>true</default>
                    <label>Thematic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Geopointe Map Layer</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <columns>NAME</columns>
        <columns>geopointe__Type__c</columns>
        <columns>geopointe__Folder__c</columns>
        <columns>geopointe__Data_Set__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GP Map Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Map Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>geopointe__Data_Layer_Detail_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	LOWER(TEXT(geopointe__Type__c)) = &apos;datalayer&apos;,
	ISBLANK(geopointe__Detail__c)
)</errorConditionFormula>
        <errorDisplayField>geopointe__Detail__c</errorDisplayField>
        <errorMessage>Detail__c field is required for data layers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>geopointe__Data_Layer_Folder_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	LOWER(TEXT(geopointe__Type__c)) = &apos;datalayer&apos;,
	AND(NOT(geopointe__Personal__c), ISBLANK(geopointe__Folder__c))
)</errorConditionFormula>
        <errorDisplayField>geopointe__Folder__c</errorDisplayField>
        <errorMessage>Data layers must be associated with a folder if they are not personal.</errorMessage>
    </validationRules>
</CustomObject>